--- a/inference_configs/inference_config_grct_qwen06_both_10_200.yaml
+++ b/inference_configs/inference_config_grct_qwen06_both_10_200.yaml
@@ -6,19 +6,19 @@ dataset:
 models:
   - original_model_id: models/Qwen3-0.6B-Base
     peft_group:
-      - ../syntax_finetuning_adapters/Qwen3_0_6B_Base_syntagrus_grct_seed10_ep2
-      - ../syntax_finetuning_adapters/Qwen3_0_6B_Base_syntagrus_grct_seed10_ep3
-      - ../syntax_finetuning_adapters/Qwen3_0_6B_Base_syntagrus_grct_seed200_ep2
-      - ../syntax_finetuning_adapters/Qwen3_0_6B_Base_syntagrus_grct_seed200_ep3      
+      - /syntax_finetuning_adapters/Qwen3_0_6B_Base_syntagrus_grct_seed10_ep2
+      - /syntax_finetuning_adapters/Qwen3_0_6B_Base_syntagrus_grct_seed10_ep3
+      - /syntax_finetuning_adapters/Qwen3_0_6B_Base_syntagrus_grct_seed200_ep2
+      - /syntax_finetuning_adapters/Qwen3_0_6B_Base_syntagrus_grct_seed200_ep3      
     is_instruct: False
     model_library: vllm
     max_tokens: 1500
   - original_model_id: models/Qwen3-0.6B-Base
     peft_group:
-      - ../syntax_finetuning_adapters/Qwen3_0_6B_syntagrus_grct_seed10_ep2
-      - ../syntax_finetuning_adapters/Qwen3_0_6B_syntagrus_grct_seed10_ep3
-      - ../syntax_finetuning_adapters/Qwen3_0_6B_syntagrus_grct_seed200_ep2
-      - ../syntax_finetuning_adapters/Qwen3_0_6B_syntagrus_grct_seed200_ep3      
+      - /syntax_finetuning_adapters/Qwen3_0_6B_syntagrus_grct_seed10_ep2
+      - /syntax_finetuning_adapters/Qwen3_0_6B_syntagrus_grct_seed10_ep3
+      - /syntax_finetuning_adapters/Qwen3_0_6B_syntagrus_grct_seed200_ep2
+      - /syntax_finetuning_adapters/Qwen3_0_6B_syntagrus_grct_seed200_ep3      
     is_instruct: False
     model_library: vllm
     max_tokens: 1500
