--- a/inference_configs/inference_config_grct_qwen06_both_10_200.yaml
+++ b/inference_configs/inference_config_grct_qwen06_both_10_200.yaml
@@ -4,7 +4,7 @@ dataset:
     representation_type: grct
 
 models:
-  - original_model_id: models/Qwen3-0.6B-Base
+  - original_model_id: /models/Qwen3-0.6B-Base
     peft_group:
       - /syntax_finetuning_adapters/Qwen3_0_6B_Base_syntagrus_grct_seed10_ep2
       - /syntax_finetuning_adapters/Qwen3_0_6B_Base_syntagrus_grct_seed10_ep3
@@ -13,7 +13,7 @@ models:
     is_instruct: False
     model_library: vllm
     max_tokens: 1500
-  - original_model_id: models/Qwen3-0.6B-Base
+  - original_model_id: /models/Qwen3-0.6B-Base
     peft_group:
       - /syntax_finetuning_adapters/Qwen3_0_6B_syntagrus_grct_seed10_ep2
       - /syntax_finetuning_adapters/Qwen3_0_6B_syntagrus_grct_seed10_ep3
