--- a/inference_configs/inference_config_grct_ruadapt4.yaml
+++ b/inference_configs/inference_config_grct_ruadapt4.yaml
@@ -1,6 +1,6 @@
 dataset:
     path: /syntax_finetuning/src/data/dataset_simple_rel/syntagrus/ru_simple_syntagrus_grct_test.json
-    name: grct_gsd
+    name: grct_syntagrus
     representation_type: grct
 
 models:
@@ -9,7 +9,7 @@ models:
       - /syntax_finetuning_adapters/RuadaptQwen3_4B_Hybrid_syntagrus_grct_seed10_ep2
       - /syntax_finetuning_adapters/RuadaptQwen3_4B_Hybrid_syntagrus_grct_seed200_ep2
       - /syntax_finetuning_adapters/RuadaptQwen3_4B_Hybrid_syntagrus_grct_seed3000_ep2
-    is_instruct: False
+    is_instruct: True
     model_library: vllm
     max_tokens: 1500
 output_dir: /syntax_finetuning_pred_results
